Add cron scheduling for Kalshi market checks (weekends 9am-9pm)
- Add cron-based scheduling for market monitoring
- Configure to run only on weekends (Sat-Sun) between 9am-9pm
- Add KALSHI_SCHEDULE_DAYS and KALSHI_SCHEDULE_HOURS config
- Add KALSHI_USE_CRON_SCHEDULE toggle
- Update render.yaml with schedule configuration

--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,15 @@ services:
     envVars:
       - key: ENVIRONMENT
         value: production
+      - key: KALSHI_CHECK_INTERVAL
+        value: "3600"
+      - key: KALSHI_ALERTS_ENABLED
+        value: "true"
+      - key: KALSHI_INSIGHTS_ENABLED
+        value: "true"
+      - key: KALSHI_USE_CRON_SCHEDULE
+        value: "true"
+      - key: KALSHI_SCHEDULE_DAYS
+        value: "sat,sun"
+      - key: KALSHI_SCHEDULE_HOURS
+        value: "9-21"
