Add Parallel API integration with per-monitor intervals, LLM-only alpha detection, and web search support

--- a/render.yaml
+++ b/render.yaml
@@ -21,3 +21,7 @@ services:
         value: "sat,sun"
       - key: KALSHI_SCHEDULE_HOURS
         value: "9-21"
+      - key: PARALLEL_MONITOR_INTERVAL
+        value: "300"
+      - key: PARALLEL_MONITOR_ENABLED
+        value: "true"
